--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
 <div class="header_nav">
     <ul>
-        <li><a href="">リエンゲージメントのサービス</a></li>
-        <li><a href="">在宅支援サービス</a></li>
-        <li><a href="">料金・手続き</a></li>
+        <li><a href="https://htsubasa.github.io/main_service/">リエンゲージメントのサービス</a></li>
+        <li><a href="https://htsubasa.github.io/reengagement-service/">在宅支援サービス</a></li>
+        <li><a href="https://htsubasa.github.io/reengagement-price-page/">料金・手続き</a></li>
         <li><a href="">事務所へのアクセス</a></li>
-        <li><a href="">在宅利用者のかたへ</a></li>
+        <li><a href="https://htsubasa.github.io/reengagement-program-page/">在宅利用者のかたへ</a></li>
     </ul>
 </div><!--nav-->
 
@@ -263,25 +263,25 @@
             <li class="nav_list"><a href="">・このようなことでお困りの方</a></li>
             <li class="nav_list"><a href="">・行政手続き(受給者証 申請)</a></li>
             <li class="nav_list"><a href="">・精神障害＋発達障害の方に特化したカリキュラム</a></li>
-            <li class="nav_list"><a href="">・料金</a> </li>
-            <li class="nav_list"><a href="">・Q&A</a></li>
+            <li class="nav_list"><a href="https://htsubasa.github.io/reengagement-price-page/">・料金</a> </li>
+            <li class="nav_list"><a href="https://htsubasa.github.io/reengagement-price-page/">・Q&A</a></li>
             <li class="nav_title"><a href="">事務所のご案内</a></li>
-            <li class="nav_title"><a href="">プログラム内容</a></li>
+            <li class="nav_title"><a href="https://htsubasa.github.io/reengagement-service-3/">プログラム内容</a></li>
             <li class="nav_title"><a href="">就職までのプロセス</a></li>
         </ul>
     </div><!--nav-->
 
     <div class="footer_nav">
         <ul>
-            <li class="nav_top_title"><a href="">在宅利用者のかたへ</a></li>
+            <li class="nav_top_title"><a href="https://htsubasa.github.io/reengagement-program-page/">在宅利用者のかたへ</a></li>
             <li class="nav_list"><a href="">・項目ヒアリング</a></li>
             <li class="nav_list"><a href="">・項目ヒアリング</a></li>
             <li class="nav_list"><a href="">・項目ヒアリング</a></li>
             <li class="nav_list"><a href="">・項目ヒアリング</a></li>
-            <li class="nav_title"><a href="">見学/ご相談</a></li>
+            <li class="nav_title"><a href="https://htsubasa.github.io/reengagement-reservation/">見学/ご相談</a></li>
             <li class="nav_title"><a href="">新着情報</a></li>
-            <li class="nav_title"><a href="">企業人事ご担当者へ</a></li>
-            <li class="nav_title"><a href="">プラバシーポリシー</a></li>
+            <li class="nav_title"><a href="https://htsubasa.github.io/reengagement_humanresource/">企業人事ご担当者へ</a></li>
+            <li class="nav_title"><a href="https://htsubasa.github.io/reengagement-privacy-page/">プラバシーポリシー</a></li>
         </ul>
     </div><!--nav-->
 
