--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
                 <p class="text_area">リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。</p>
                 <div id="block_btn1" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
                 </div>        
                 <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
             </div><!--box-->
@@ -140,7 +140,7 @@
                 <h3 id="second_title" class="title">通所が難しい方のための<br>在宅支援サービス</h3>
                 <p class="text_area">リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します。リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します</p>
                 <div id="block_btn2" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/reengagement-program-page/">もっとみる</a>
                 </div>        
                 <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
             </div><!--box-->
@@ -154,7 +154,7 @@
                 <h3 id="third_title" class="title">料金・手続き</h3>
                 <p class="text_area">リエンゲージメントが提供しているサービスを就労移行支援と言いますが、そもそも就労移行支援とは何でしょうか？<br>サービスの特徴や利用方法、料金についてご説明します。</p>
                 <div id="block_btn3" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/reengagement-price-page/">もっとみる</a>
                 </div>        
                 <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
             </div><!--box-->
@@ -176,7 +176,7 @@
            <p class="card_text">働きたいという思いがあるけれど、なかなかその一歩を踏み出す勇気がないのなら、就労移行支援を利用してみませんか？</p>
         </a><!--a-->
         <div id="card_btn1" class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
         </div>
    </div><!--card-->
 
@@ -187,7 +187,7 @@
         <p class="card_text">リエンゲージメンとへの、ご見学やご相談をご希望のかたは、ご気軽にご連絡ください。</p>
     </a><!--a-->
         <div id="card_btn2" class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/reengagement-reservation/">もっとみる</a>
         </div>
 </div><!--card-->
 
