--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>リエンゲージメント</title>
-    <link rel="stylesheet" href="scss/service3-page.css">
+    <link rel="stylesheet" href="scss/front_page.css">
+    <link rel="icon" type="image/png" href="img/common/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&family=Oswald:wght@400;500;600&family=Raleway:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -43,47 +44,198 @@
 </div><!--header_wrap-->
 </header>
 
+
 <section class="mainvisual">
     <div class="mainvisual_wrap">
-        <div class="mv_inner_text">
-            <h2 class="top_inner_title">プログラム内容</h2>
-        </div><!--mv_inner_text-->
+        <div class="mainvisual_text">
+            <div class="color_circle">
+            <div id="orange_circle" class="circle"><p>精神科医<br>監修による<br>プログラム</p></div>
+            <div id="blue_circle" class="circle"><p>常勤の<br>臨床心理士／<br>公認心理師</p></div>
+            <div id="yellow_circle" class="circle"><p>精神科との<br>連携</p></div>
+        </div>
+        <h1>うつで働くのは大変<span class="sub_text">だから、<span class="orange_text">こころ</span>と<span class="blue_text">身体</span>の<span class="yellow_text">体質改善</span></span></h1>
+        <p class="mainvisual_bottom_text">うつ・双極性障害・不安障害・適応障害などの精神疾患で<br>ご退職された方・就職が難しい方へ、<br>心理の専門家があなたの就職をお手伝いします。</p>    
+    </div>
+        <img src="img/front/mainvisual_pic.png">
     </div><!--wrap-->
 </section>
+
+<section class="top_block">
+    <div class="top_block_wrap">
+
+            <div class="article_wrap">
+
+                <div class="article">
+                <a href="#">
+                    <p class="new_article">新着情報</p>
+                    <p class="date">2020.10.01</p>
+                    <p class="article_text">リエンゲージメントホームページをリニューアルしました。</p>
+                </a>
+                </div><!--article-->
+
+                <div class="article">
+                    <a href="#">
+                        <p class="new_article">新着情報</p>
+                        <p class="date">2020.10.01</p>
+                        <p class="article_text">リエンゲージメントホームページをリニューアルしました。</p>
+                    </a>
+            </div><!--article-->
+        </div><!--article_wrap-->
+
+
+    <div class="group">
+        <h2 class="group_intro">プログラムを支えるリエンゲージメントグループ</h2>
+        <div class="group_list">
+            <img id="group_logo1" src="img/front/group_logo1.png" alt="グループロゴ">
+
+            <div class="logo_name">
+                <img id="group_logo2" src="img/front/group_logo2.png" alt="グループロゴ">
+                <p class="grooup_logo2_text">ブレインケアクリニック</p>
+            </div>
+
+            <div class="logo_name">
+                <img id="group_logo3" src="img/front/group_logo3.png" alt="グループロゴ">
+                <p class="grooup_logo3_text"><span class="grouop_logo3_span">日本アドバンスNLP協会 認定校</span>日本NLP学院</p>
+            </div>
+
+            <p class="group_logo4_text">新宿御苑前<br>カウンセリングセンター</p>
+
+        </div><!--group_list-->
+    </div><!--group-->
+
+    <div class="concept_wrap">
+        <img src="img/front/concept_pic.png" alt="コンセプト写真">
+        <div class="concept_text_block">
+            <p class="concept_en">CONCEPT</p>
+            <h2 class="concept_title">こころと身体の体質改善。</h2>
+            <p class="concept_text">リエンゲージメントは利用者の皆さまに「病気や症状の回復だけにとどまらず、この機会を自分らしく生きていける自分に変われるきっかけとしていただきたい」との思いから、「こころと身体、考え方の体質改善」をコンセプトに、心理専門スタッフによる心理・コミュニケーションの専門指導をメインにカリキュラムを組んでいます。</p>
+        </div>
+
+    </div><!--concept_wrap-->
+    
+
+    </div><!--top_block_wrap-->
+</section><!--top_block-->
+
 
 
 
 <section class="content">
-    <div class="content_box">
-       <h2>リエンゲージメントの特長(1)</h2>
-       <h2>リエンゲージメントの特長(2)</h2>
-       <h2>リエンゲージメントの特長(3)</h2>
-       <h2>リエンゲージメントの特長(4)</h2>
-       <h2>リエンゲージメントの特長(5)</h2>
-       <h2>リエンゲージメントの特長(6)</h2>
-       <h2>プログラム内容(心の体質改善ステップ)</h2>
-       <h2>プログラム内容(就職に向けて)</h2>
-       <h2>具体的なプログラム内容</h2>
-       <h2>回復・改善・発展プログラム</h2>
-       <h2>プログラム開発・提供</h2>
-       <h2>自律神経を計測</h2>
+    <div class="content_wrap">
+        <div id="block_first" class="service_block">    
+            <div id="box_first" class="box">
+                <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
+                <p class="text_area">リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。</p>
+                <div id="block_btn1" class="btn">
+                    <a href="">もっとみる</a>
+                </div>        
+                <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
+            </div><!--box-->
+            <img id="img_first" class="pc_pic" src="img/front/content_pic1.png" alt="話し合い写真">
+            <img id="img_first" class="sp_pic" src="img/front/content_pic1.png" alt="話し合い写真">
+        </div><!--service_block-->
 
-    </div><!--content_box-->
+        <div id="block_second" class="service_block">    
+            <div id="box_second" class="box">
+                <h3 id="second_title" class="title">通所が難しい方のための<br>在宅支援サービス</h3>
+                <p class="text_area">リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します。リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します</p>
+                <div id="block_btn2" class="btn">
+                    <a href="">もっとみる</a>
+                </div>        
+                <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
+            </div><!--box-->
+            <img id="img_second" class="pc_pic" src="img/front/content_pic2.png" alt="話し合い写真">
+            <img id="img_second" class="sp_pic" src="img/front/content_pic2.png" alt="話し合い写真">
+        </div><!--service_block-->
+
+
+    <div id="block_third" class="service_block">    
+            <div id="box_third" class="box">
+                <h3 id="third_title" class="title">料金・手続き</h3>
+                <p class="text_area">リエンゲージメントが提供しているサービスを就労移行支援と言いますが、そもそも就労移行支援とは何でしょうか？<br>サービスの特徴や利用方法、料金についてご説明します。</p>
+                <div id="block_btn3" class="btn">
+                    <a href="">もっとみる</a>
+                </div>        
+                <img class="character_img" src="img/front/character.png" alt="キャラクターロゴ"> 
+            </div><!--box-->
+            <img id="img_third" class="pc_pic" src="img/front/content_pic3.png" alt="話し合い写真">
+            <img id="img_third" class="sp_pic" src="img/front/content_pic3.png" alt="話し合い写真">
+    </div><!--service_block-->
+
+    </div><!--content_wrap-->
 </section><!--content-->
 
 
-<section class="contact_wrap">
-    <h3 class="contact_title">見学相談のご予約・お問合せはこちらから</h3>
-    <div class="btn">
-        <a href="#">オンラインでのご予約・お問合せ</a>
-    </div>
-    <p class="reservation">お電話でのご予約・お問合せ</p>
-    <div class="contact_tel">
-        <p id="shinjuku">新宿<span class="number"><img src="img/service/phone_logo.png">03-0000-0000</span></p>
-        <p id="yokohama">横浜<span class="number"><img src="img/service/phone_logo.png">03-0000-0000</span></p>
-    </div><!--header_tel-->
+<section class="card_block">
+    <div class="card_wrap">
 
-</section><!--contact-->
+   <div class="card">
+       <a class="card_tag" href="#">
+           <img src="img/front/card_img1.png">
+           <h2 class="card_title">就労移行支援について</h2>
+           <p class="card_text">働きたいという思いがあるけれど、なかなかその一歩を踏み出す勇気がないのなら、就労移行支援を利用してみませんか？</p>
+        </a><!--a-->
+        <div id="card_btn1" class="btn">
+            <a href="">もっとみる</a>
+        </div>
+   </div><!--card-->
+
+   <div class="card">
+    <a class="card_tag" href="#">
+        <img src="img/front/card_img2.png">
+        <h2 class="card_title">見学/ご相談</h2>
+        <p class="card_text">リエンゲージメンとへの、ご見学やご相談をご希望のかたは、ご気軽にご連絡ください。</p>
+    </a><!--a-->
+        <div id="card_btn2" class="btn">
+            <a href="">もっとみる</a>
+        </div>
+</div><!--card-->
+
+
+<div class="card">
+    <a class="card_tag" href="#">
+        <img src="img/front/card_img3.png">
+        <h2 class="card_title">在宅利用者のかたへ</h2>
+        <p id="card_btn3" class="card_text">すでに在宅利用のかたはこちらをご覧ください。</p>
+    </a><!--a-->
+        <div class="btn">
+            <a href="">もっとみる</a>
+        </div>
+</div><!--card-->
+</div><!--card_wrap-->
+</section><!--card_block-->
+
+
+
+<section class="topic">
+    <div class="topic_wrap">
+        <h2 class="topic_title">BLOG</h2>
+        <div class="article_wrap">
+            <div class="article">
+            <a href="#">
+                <p class="date">2020.10.01</p>
+                <p class="article_text">リエンゲージメントホームページをリニューアルしました。</p>
+            </a>
+            </div><!--article-->
+            <div class="article">
+                <a href="#">
+                    <p class="date">2020.10.01</p>
+                    <p class="article_text">リエンゲージメントホームページをリニューアルしました。</p>
+                </a>
+            </div><!--article-->
+                <div class="article">
+                    <a href="#">
+                        <p class="date">2020.10.01</p>
+                        <p class="article_text">リエンゲージメントホームページをリニューアルしました。</p>
+                    </a>
+                </div><!--article-->
+        
+        </div><!--article_wrap-->
+        <div class="btn">
+            <a href="">もっとみる</a>
+        </div>
+    </div><!--topic_wrap-->
+</section><!--topic-->
 
 
 <footer>
