--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         <div class="footer_nav">
             <ul>
                 <li class="nav_top_title"><a href="https://htsubasa.github.io/main_service/">リエンゲージメントについて</a></li>
-                <li class="nav_title"><a href="https://htsubasa.github.io/reengagement-service/">在宅支援サービス</a></li>
-                <li class="nav_title"><a href="https://htsubasa.github.io/reengagement-price-page/">料金・手続き</a></li>
+                <li class="nav_top_title"><a href="https://htsubasa.github.io/reengagement-service/">在宅支援サービス</a></li>
+                <li class="nav_top_title"><a href="https://htsubasa.github.io/reengagement-price-page/">料金・手続き</a></li>
             </ul>
         </div><!--nav-->
     
