--- a/index.html
+++ b/index.html
@@ -65,7 +65,26 @@
     </div>
         <img src="img/front/mainvisual_pic.png">
     </div><!--wrap-->
+
+    <div class="mainvisual_wrap_sp">
+        <img src="img/front/mainvisual_sp.png">
+        <div class="mainvisual_text">
+            <div class="color_circle">
+            <div id="orange_circle" class="circle"><p>精神科医<br>監修による<br>プログラム</p></div>
+            <div id="blue_circle" class="circle"><p>常勤の<br>臨床心理士／<br>公認心理師</p></div>
+            <div id="yellow_circle" class="circle"><p>精神科との<br>連携</p></div>
+        </div>
+        <h1>うつで働くのは大変<span class="sub_text">だから、<span class="orange_text">こころ</span>と<span class="blue_text">身体</span>の<span class="yellow_text">体質改善</span></span></h1>
+        <p class="mainvisual_bottom_text">うつ・双極性障害・不安障害・適応障害などの精神疾患で<br>ご退職された方・就職が難しい方へ、<br>心理の専門家があなたの就職をお手伝いします。</p>    
+    </div>
+    </div><!--wrap-->
+    
 </section>
+
+
+
+
+
 
 <section class="top_block">
     <div class="top_block_wrap">
@@ -89,7 +108,7 @@
 
 
     <div class="group">
-        <h2 class="group_intro">プログラムを支えるリ<br class="group_list_br">エンゲージメントグループ</h2>
+        <h2 class="group_intro">プログラムを支える<br class="group_list_br">リエンゲージメントグループ</h2>
         <div class="group_list">
             <img id="group_logo1" src="img/front/group_logo1.png" alt="グループロゴ">
 
