--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
                 <p class="text_area">リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。</p>
                 <div id="block_btn1" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
                 </div>        
                 <img class="character_img" src="img/front/icon1.png" alt="キャラクターロゴ"> 
             </div><!--box-->
@@ -165,7 +165,7 @@
                 <h3 id="second_title" class="title">通所が難しい方のための<br>在宅支援サービス</h3>
                 <p class="text_area">リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します。リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します</p>
                 <div id="block_btn2" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/reengagement-service/">もっとみる</a>
                 </div>        
                 <img class="character_img2" src="img/front/icon2.png" alt="キャラクターロゴ"> 
             </div><!--box-->
@@ -179,7 +179,7 @@
                 <h3 id="third_title" class="title">料金・手続き</h3>
                 <p class="text_area">リエンゲージメントが提供しているサービスを就労移行支援と言いますが、そもそも就労移行支援とは何でしょうか？<br>サービスの特徴や利用方法、料金についてご説明します。</p>
                 <div id="block_btn3" class="btn">
-                    <a href="">もっとみる</a>
+                    <a href="https://htsubasa.github.io/reengagement-price-page/">もっとみる</a>
                 </div>        
                 <img class="character_img3" src="img/front/icon3.png" alt="キャラクターロゴ"> 
             </div><!--box-->
