--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div><!--header_tel-->
 
     <div class="btn">
-        <a href="">WEB予約はこちら</a>
+        <a href="https://htsubasa.github.io/reengagement-reservation/">WEB予約はこちら</a>
     </div><!--btn-->
 </div><!--header_info-->
 </div><!--header_block-->
@@ -201,7 +201,7 @@
            <p class="card_text">働きたいという思いがあるけれど、なかなかその一歩を踏み出す勇気がないのなら、就労移行支援を利用してみませんか？</p>
         </a><!--a-->
         <div id="card_btn1" class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
         </div>
    </div><!--card-->
 
@@ -212,7 +212,7 @@
         <p class="card_text">リエンゲージメンとへの、ご見学やご相談をご希望のかたは、ご気軽にご連絡ください。</p>
     </a><!--a-->
         <div id="card_btn2" class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/reengagement-reservation/">もっとみる</a>
         </div>
 </div><!--card-->
 
@@ -224,7 +224,7 @@
         <p id="card_btn3" class="card_text">すでに在宅利用のかたはこちらをご覧ください。</p>
     </a><!--a-->
         <div class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/reengagement-program-page/">もっとみる</a>
         </div>
 </div><!--card-->
 </div><!--card_wrap-->
@@ -257,7 +257,7 @@
         
         </div><!--article_wrap-->
         <div class="btn">
-            <a href="">もっとみる</a>
+            <a href="https://htsubasa.github.io/reengagement-archive/">もっとみる</a>
         </div>
     </div><!--topic_wrap-->
 </section><!--topic-->
