--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div id="block_first" class="service_block">    
             <div id="box_first" class="box">
                 <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
-                <p class="text_area">リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。リエンゲージメントのサービスの特徴とプログラムについてご紹介します。</p>
+                <p class="text_area">うつ病や双極性障害、不安障害、適応障害などの精神疾患があり、就労移行支援サービスのご利用をご検討されている方へ、リエンゲージメントのサービスの特徴やカリキュラムについてご説明します。</p>
                 <div id="block_btn1" class="btn">
                     <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
                 </div>        
@@ -163,7 +163,7 @@
         <div id="block_second" class="service_block">    
             <div id="box_second" class="box">
                 <h3 id="second_title" class="title">通所が難しい方のための<br>在宅支援サービス</h3>
-                <p class="text_area">リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します。リエンゲージメントのサービスの在宅支援サービスとプログラムについてご紹介します</p>
+                <p class="text_area">リエンゲージメントでは、お身体の障害や心の問題で外出が難しい方へ、在宅での就労支援サービスを提供しています。リエンゲージメントの通所プログラムをベースにしたオンライン学習をメインにしたカリキュラムとなっています。</p>
                 <div id="block_btn2" class="btn">
                     <a href="https://htsubasa.github.io/reengagement-service/">もっとみる</a>
                 </div>        
