--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <div class="header_wrap">
     <div class="header_block">
     <div class="header_logo">
-    <img src="img/front/group_logo2.png" alt="ロゴ">
       <h1 class="header_logo_title"><a href="https://htsubasa.github.io/reengagement/"><span class="header_logo_sub">精神疾患の方のための就労移行支援</span>リエンゲージメント</a></h1>
 </div><!--header_logo-->
 
@@ -198,7 +197,7 @@
        <a class="card_tag" href="#">
            <img src="img/front/card_img1.png">
            <h2 class="card_title">就労移行支援について</h2>
-           <p class="card_text">働きたいという思いがあるけれど、なかなかその一歩を踏み出す勇気がないのなら、就労移行支援を利用してみませんか？</p>
+           <p class="card_text">リエンゲージメントの各事業所へのアクセスや会社情報を知りたい方は、こちらをご覧ください。</p>
         </a><!--a-->
         <div id="card_btn1" class="btn">
             <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
