--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
                 <p class="text_area">うつ病や双極性障害、不安障害、適応障害などの精神疾患があり、就労移行支援サービスのご利用をご検討されている方へ、リエンゲージメントのサービスの特徴やカリキュラムについてご説明します。</p>
                 <div id="block_btn1" class="btn">
-                    <a href="https://htsubasa.github.io/main_service/">もっとみる</a>
+                    <a href="https://htsubasa.github.io/reengagement_company/">もっとみる</a>
                 </div>        
                 <img class="character_img" src="img/front/icon1.png" alt="キャラクターロゴ"> 
             </div><!--box-->
