--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div id="block_first" class="service_block">    
             <div id="box_first" class="box">
                 <h3 id="first_title" class="title">ご利用をお考えの方へ</h3>
-                <p class="text_area">うつ病や双極性障害、不安障害、適応障害などの精神疾患があり、就労移行支援サービスのご利用をご検討されている方へ、リエンゲージメントのサービスの特徴やカリキュラムについてご説明します。</p>
+                <p class="text_area">リエンゲージメントの各事業所へのアクセスや会社情報を知りたい方は、こちらをご覧ください。</p>
                 <div id="block_btn1" class="btn">
                     <a href="https://htsubasa.github.io/reengagement_company/">もっとみる</a>
                 </div>        
